[package]
name = "rust-batched"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "rust-batched"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
num_cpus = "1.16.0"
rand = "0.8.5"
itertools = "0.11.0"
